fix tape alignment and reset

--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,7 @@
   border: none;
   padding: 0;
   outline: none;
+  -webkit-user-drag: none;
 }
 
 #cursor {
